remake header contact button, minor fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
           <li><a href="#about_me">About me</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a class="contact">Contact</a></li>
+          <li>
+            <div class="header_icons">
+              <a href="mailto:tranduclong092@gmail.com">
+                <span class="material-symbols-outlined"> mail </span>
+              </a>
+              <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
+                <i class="devicon-linkedin-plain"></i>
+              </a>
+              <a href="https://github.com/dk10119" target="_blank">
+                <i class="devicon-github-original"></i>
+              </a>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
@@ -230,8 +242,8 @@
       <!--End of about me section-->
 
       <!--Projects section-->
-      <h2>Take a look at my projects</h2>
       <section id="projects">
+        <h2>Take a look at my projects</h2>
         <container>
           <!-- carwash -->
           <div>
