add contact links to contact buttons

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <body>
     <!-- Main heading: Logo, name, link to section, email + send email button -->
     <header>
-      <container>
-        <img src="images/logo_alex.svg" />
-        <div>
-          <strong style="color: #edafb8">Alex Tran</strong>
-          <p>porfolio</p>
-        </div>
-      </container>
+      <a href="#">
+        <container>
+          <img src="images/logo_alex.svg" />
+          <div>
+            <strong style="color: #edafb8">Alex Tran</strong>
+            <p>porfolio</p>
+          </div>
+        </container>
+      </a>
       <nav>
         <ul>
           <li><a href="#skills">Skills</a></li>
@@ -55,6 +57,19 @@
             <img src="images/icon_click.png" alt="Contact button" />
             <span>Get in touch</span>
           </button>
+          <div class="contact_icons">
+            <div>
+              <a href="mailto:tranduclong092@gmail.com">
+                <span class="material-symbols-outlined"> mail </span>
+              </a>
+              <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
+                <i class="devicon-linkedin-plain"></i>
+              </a>
+              <a href="https://github.com/dk10119" target="_blank">
+                <i class="devicon-github-original"></i>
+              </a>
+            </div>
+          </div>
         </container>
         <img class="hero_img" src="images/profile_picture_1.png" atl="Profile picture" />
       </section>
@@ -237,6 +252,19 @@
             <img src="images/icon_click.png" alt="Contact button" />
             <span>Get in touch</span>
           </button>
+          <div class="contact_icons">
+            <div>
+              <a href="mailto:tranduclong092@gmail.com">
+                <span class="material-symbols-outlined"> mail </span>
+              </a>
+              <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
+                <i class="devicon-linkedin-plain"></i>
+              </a>
+              <a href="https://github.com/dk10119" target="_blank">
+                <i class="devicon-github-original"></i>
+              </a>
+            </div>
+          </div>
         </container>
       </section>
       <!--End of about me section-->
