complete contact button, minor improve

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li>
             <div class="header_icons">
               <a href="mailto:tranduclong092@gmail.com">
-                <span class="material-symbols-outlined"> mail </span>
+                <i class="fas fa-at"></i>
               </a>
               <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
                 <i class="devicon-linkedin-plain"></i>
@@ -53,19 +53,19 @@
             and a Full-stack<br />
             Web Developer
           </h1>
-          <button class="contact contact_button">
+          <button class="contact_button" id="contact_1">
             <img src="images/icon_click.png" alt="Contact button" />
             <span>Get in touch</span>
           </button>
-          <div class="contact_icons">
+          <div class="contact_icons hidden">
             <div>
-              <a href="mailto:tranduclong092@gmail.com">
-                <span class="material-symbols-outlined"> mail </span>
+              <a class="hidden" href="mailto:tranduclong092@gmail.com">
+                <i class="fas fa-at"></i>
               </a>
-              <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
+              <a class="hidden" href="https://www.linkedin.com/in/tduclong/" target="_blank">
                 <i class="devicon-linkedin-plain"></i>
               </a>
-              <a href="https://github.com/dk10119" target="_blank">
+              <a class="hidden" href="https://github.com/dk10119" target="_blank">
                 <i class="devicon-github-original"></i>
               </a>
             </div>
@@ -248,19 +248,19 @@
             - I am currently pursuing the Full-stack developer - React, Drupal at <strong>Business College Helsinki</strong>.<br />
             - I am looking for an internship / traineeship / junior software developer position.
           </p>
-          <button class="contact contact_button">
+          <button class="contact_button" id="contact_2">
             <img src="images/icon_click.png" alt="Contact button" />
             <span>Get in touch</span>
           </button>
-          <div class="contact_icons">
+          <div class="contact_icons hidden">
             <div>
-              <a href="mailto:tranduclong092@gmail.com">
-                <span class="material-symbols-outlined"> mail </span>
+              <a class="hidden" href="mailto:tranduclong092@gmail.com">
+                <i class="fas fa-at"></i>
               </a>
-              <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
+              <a class="hidden" href="https://www.linkedin.com/in/tduclong/" target="_blank">
                 <i class="devicon-linkedin-plain"></i>
               </a>
-              <a href="https://github.com/dk10119" target="_blank">
+              <a class="hidden" href="https://github.com/dk10119" target="_blank">
                 <i class="devicon-github-original"></i>
               </a>
             </div>
@@ -382,10 +382,11 @@
           <p>Copyright&copy;</p>
           <strong style="color: #edafb8">Alex Tran</strong>
         </div>
+        <p>&lt; tranduclong092@gmail.com &gt;</p>
       </container>
       <div class="footer_icons">
         <a href="mailto:tranduclong092@gmail.com">
-          <span class="material-symbols-outlined"> mail </span>
+          <i class="fas fa-at"></i>
         </a>
         <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
           <i class="devicon-linkedin-plain"></i>
@@ -396,5 +397,7 @@
       </div>
     </footer>
     <!--End of footer-->
+    <script src="main.js"></script>
+    <script src="https://kit.fontawesome.com/ec91d642f0.js" crossorigin="anonymous"></script>
   </body>
 </html>
