add back to top button

--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
           <i class="devicon-github-original"></i>
         </a>
       </div>
+      <button class="contact_button" id="back_to_top"><i class="fa-solid fa-angles-up"></i>To top</button>
     </footer>
     <!--End of footer-->
     <script src="main.js"></script>
