add various animations and interactives

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Main heading: Logo, name, link to section, email + send email button -->
     <header>
       <a href="#">
-        <container>
+        <container title="Welcome to my portfolio!">
           <img src="images/logo_alex.svg" />
           <div>
             <strong style="color: #edafb8">Alex Tran</strong>
@@ -28,13 +28,13 @@
           <li><a href="#projects">Projects</a></li>
           <li>
             <div class="header_icons">
-              <a href="mailto:tranduclong092@gmail.com">
+              <a title="Send an email to tranduclong092@gmail.com" href="mailto:tranduclong092@gmail.com">
                 <i class="fas fa-at"></i>
               </a>
-              <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
+              <a title="Visit my linkedIn: tduclong" href="https://www.linkedin.com/in/tduclong/" target="_blank">
                 <i class="devicon-linkedin-plain"></i>
               </a>
-              <a href="https://github.com/dk10119" target="_blank">
+              <a title="View my github page: dk10119" href="https://github.com/dk10119" target="_blank">
                 <i class="devicon-github-original"></i>
               </a>
             </div>
@@ -157,13 +157,15 @@
           <div class="resume_card">
             <div class="resume_header">
               <div>
-                <div class="resume_logo_container">
-                  <img src="images/logo_business_college.png" alt="Business College Helsinki logo" />
-                  <p>
-                    Business College<br />
-                    Helsinki
-                  </p>
-                </div>
+                <a href="https://bc.fi" target="_blank">
+                  <div class="resume_logo_container">
+                    <img src="images/logo_business_college.png" alt="Business College Helsinki logo" />
+                    <p>
+                      Business College<br />
+                      Helsinki
+                    </p>
+                  </div>
+                </a>
                 <p>01/24 - 12/24</p>
               </div>
               <h4>Full-stack Developer - React, Drupal</h4>
@@ -179,10 +181,12 @@
           <div class="resume_card">
             <div class="resume_header">
               <div>
-                <div class="resume_logo_container">
-                  <img src="images/logo_laurea.png" alt="Laurea UAS logo" />
-                  <p>Laurea UAS</p>
-                </div>
+                <a href="https://laurea.fi" target="_blank">
+                  <div class="resume_logo_container">
+                    <img src="images/logo_laurea.png" alt="Laurea UAS logo" />
+                    <p>Laurea UAS</p>
+                  </div>
+                </a>
                 <p>2016 - 2021</p>
               </div>
               <h4>BBA, Business information technology</h4>
@@ -199,10 +203,12 @@
           <div class="resume_card">
             <div class="resume_header">
               <div>
-                <div class="resume_logo_container">
-                  <img src="images/logo_cawash.svg" alt="Carwash Suomi logo" />
-                  <p>Carwash Suomi</p>
-                </div>
+                <a href="https:/carwash.fi" target="_blank">
+                  <div class="resume_logo_container">
+                    <img src="images/logo_cawash.svg" alt="Carwash Suomi logo" />
+                    <p>Carwash Suomi</p>
+                  </div>
+                </a>
                 <p>2021 - 2022</p>
               </div>
               <h4>Front-end developer</h4>
