--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" />
     <link rel="shortcut icon" href="images/logo_alex.svg" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
 
   <body>
@@ -21,6 +22,7 @@
           </div>
         </container>
       </a>
+      <button class="hamburger_menu"><i class="fa-solid fa-burger"></i></button>
       <nav>
         <ul>
           <li><a href="#skills">Skills</a></li>
