hotfix bigger font size for some mobile texts

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <br />
                   <strong>Web CMS:</strong> Webflow, Wordpress, etc.
                   <br />
-                  <strong>Web design tools:</strong> Figma, Sketch.
+                  <strong>Design tools:</strong> Figma, Sketch.
                   <br />
                   <strong>Graphic design:</strong> Illustrator, Photoshop, Lightroom.
                 </p>
