add a project, update skills section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>
                   <strong>Proficient languages:</strong> HTML, CSS, Javascript, Typescript.
                   <br />
-                  <strong>Libraries and frameworks:</strong> React, Tailwind, Next.js.
+                  <strong>Libraries and frameworks:</strong> React, Vite, Next.js, Tailwind.
                 </p>
               </div>
               <div class="skill_card_icons">
@@ -132,9 +132,9 @@
               </div>
               <div class="skill_card_main">
                 <p>
-                  <strong>Development tools:</strong> Git, Trello.
+                  <strong>Dev tools:</strong> VSCode, Git, Trello.
                   <br />
-                  <strong>Web CMS:</strong> Webflow, Wordpress, etc.
+                  <strong>Web CMS:</strong> Webflow, Wordpress.
                   <br />
                   <strong>Design tools:</strong> Figma, Sketch.
                   <br />
@@ -142,6 +142,7 @@
                 </p>
               </div>
               <div class="skill_card_icons">
+                <img title="Visual Studio Code" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" />
                 <img title="Git version control, Github" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
                 <img title="Trello" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/trello/trello-original.svg" />
                 <img title="Webflow" style="background-color: white" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/webflow/webflow-original.svg" />
@@ -284,6 +285,31 @@
       <section id="projects">
         <h2>Take a look at my projects</h2>
         <container>
+          <!-- Pokedex -->
+          <div>
+            <a href="https://pokedex.alextran.dev" target="_blank">
+              <div class="thumbnail">
+                <div>
+                  <img src="images/thumbnail_pokedex.png" alt="Cars database site thumbnail" />
+                </div>
+              </div>
+            </a>
+            <div class="projects_main">
+              <div>
+                <a class="project_link" href="https://pokedex.alextran.dev" target="_blank">
+                  <h4>Pokedex</h4>
+                  <span class="material-symbols-outlined"> open_in_new</span>
+                </a>
+                <a class="project_view_code" href="https://github.com/dk10119/pokedex" target="_blank">
+                  <u>View code</u>
+                  <i class="devicon-github-original colored"></i>
+                </a>
+              </div>
+              <p><strong>["HTML", "CSS", "Javascript", "RestAPI"]</strong></p>
+              <p><strong>Description:</strong> A page to learn about the wonderful world of pokemons</p>
+              <p><strong>Features:</strong> View all pokemons card with name and picture. Show various infos about a pokemon. Search and mark pokemon as favorites.</p>
+            </div>
+          </div>
           <!-- carwash -->
           <div>
             <a href="https://www.carwash.fi/" target="_blank">
