change github links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0" />
-    <link rel="shortcut icon" href="images/logo_alex.svg" />
+    <link rel="icon" type="image/x-icon" href="images/logo_alex.svg" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
 
@@ -37,7 +37,7 @@
               <a title="Visit my linkedIn: tduclong" href="https://www.linkedin.com/in/tduclong/" target="_blank">
                 <i class="devicon-linkedin-plain"></i>
               </a>
-              <a title="View my github page: dk10119" href="https://github.com/dk10119" target="_blank">
+              <a title="View my github page: alextrandev" href="https://github.com/alextrandev" target="_blank">
                 <i class="devicon-github-original"></i>
               </a>
             </div>
@@ -68,7 +68,7 @@
               <a class="hidden" href="https://www.linkedin.com/in/tduclong/" target="_blank">
                 <i class="devicon-linkedin-plain"></i>
               </a>
-              <a class="hidden" href="https://github.com/dk10119" target="_blank">
+              <a class="hidden" href="https://github.com/alextrandev" target="_blank">
                 <i class="devicon-github-original"></i>
               </a>
             </div>
@@ -272,7 +272,7 @@
               <a class="hidden" href="https://www.linkedin.com/in/tduclong/" target="_blank">
                 <i class="devicon-linkedin-plain"></i>
               </a>
-              <a class="hidden" href="https://github.com/dk10119" target="_blank">
+              <a class="hidden" href="https://github.com/alextrandev" target="_blank">
                 <i class="devicon-github-original"></i>
               </a>
             </div>
@@ -300,7 +300,7 @@
                   <h4>Pokedex</h4>
                   <span class="material-symbols-outlined"> open_in_new</span>
                 </a>
-                <a class="project_view_code" href="https://github.com/dk10119/pokedex" target="_blank">
+                <a class="project_view_code" href="https://github.com/alextrandev/pokedex" target="_blank">
                   <u>View code</u>
                   <i class="devicon-github-original colored"></i>
                 </a>
@@ -346,7 +346,7 @@
                   <h4>Cars database</h4>
                   <span class="material-symbols-outlined"> open_in_new</span>
                 </a>
-                <a class="project_view_code" href="https://github.com/dk10119/personal_projects/tree/main/cars_database" target="_blank">
+                <a class="project_view_code" href="https://github.com/alextrandev/personal_projects/tree/main/cars_database" target="_blank">
                   <u>View code</u>
                   <i class="devicon-github-original colored"></i>
                 </a>
@@ -371,7 +371,7 @@
                   <h4>Countries info</h4>
                   <span class="material-symbols-outlined"> open_in_new</span>
                 </a>
-                <a class="project_view_code" href="https://github.com/dk10119/personal_projects/tree/main/country_info" target="_blank">
+                <a class="project_view_code" href="https://github.com/alextrandev/personal_projects/tree/main/country_info" target="_blank">
                   <u>View code</u>
                   <i class="devicon-github-original colored"></i>
                 </a>
@@ -396,7 +396,7 @@
                   <h4>Pancake shop</h4>
                   <span class="material-symbols-outlined"> open_in_new</span>
                 </a>
-                <a class="project_view_code" href="https://github.com/dk10119/personal_projects/tree/main/pancake_shop" target="_blank">
+                <a class="project_view_code" href="https://github.com/alextrandev/personal_projects/tree/main/pancake_shop" target="_blank">
                   <u>View code</u>
                   <i class="devicon-github-original colored"></i>
                 </a>
@@ -428,7 +428,7 @@
         <a href="https://www.linkedin.com/in/tduclong/" target="_blank">
           <i class="devicon-linkedin-plain"></i>
         </a>
-        <a href="https://github.com/dk10119" target="_blank">
+        <a href="https://github.com/alextrandev" target="_blank">
           <i class="devicon-github-original"></i>
         </a>
       </div>
